// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionView /> should render component when answered 1`] = `
<div
  className="sc-VigVT ljONEf"
>
  <div
    className="sc-jTzLTM jnXhag"
  >
    <div
      className="sc-jzJRlG hbbPSk"
    >
      1
       / 
      10
    </div>
    <div
      className="sc-bwzfXH bvmjNt"
      style={
        Object {
          "margin": "auto",
        }
      }
    >
      <div
        className="sc-htpNat eaelvy"
      >
        <div
          className="sc-bxivhb cIIvqJ"
        >
          初句
        </div>
        <div
          className="sc-bxivhb sc-ifAKCX ejiZuo"
        >
          二句
        </div>
        <div
          className="sc-bxivhb sc-EHOje fUTEIU"
        >
          三句
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-fjdhpX hZnkOe"
  >
    <div
      className="sc-bZQynM lmXxAo"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 0.8,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-dnqmqq sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM lmXxAo"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 0.8,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-dnqmqq sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM lmXxAo"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-dnqmqq sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM lmXxAo"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 0.8,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-dnqmqq sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gZMcBi bKdPNs"
    onClick={[MockFunction]}
  >
    <div
      className="sc-gqjmRU kzcJUc gatsby-image-wrapper"
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "paddingBottom": "100%",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          sizes="100 200 300"
          srcSet="asdfasdf"
        />
        <img
          alt=""
          onLoad={[Function]}
          src="correct-base64-encoded-image"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 0.5s",
              "width": "100%",
            }
          }
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"correct-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`<QuestionView /> should render component when not answered 1`] = `
<div
  className="sc-VigVT ljONEf"
>
  <div
    className="sc-jTzLTM jnXhag"
  >
    <div
      className="sc-jzJRlG hbbPSk"
    >
      1
       / 
      10
    </div>
    <div
      className="sc-bwzfXH bvmjNt"
      style={
        Object {
          "margin": "auto",
        }
      }
    >
      <div
        className="sc-htpNat eaelvy"
      >
        <div
          className="sc-bxivhb cIIvqJ"
        >
          <span
            className="sc-bdVaJa siDlf"
            onAnimationEnd={[Function]}
          >
            初
          </span>
          <span>
            　
          </span>
        </div>
        <div
          className="sc-bxivhb sc-ifAKCX ejiZuo"
        >
          <span>
            　
          </span>
          <span>
            　
          </span>
        </div>
        <div
          className="sc-bxivhb sc-EHOje fUTEIU"
        >
          <span>
            　
          </span>
          <span>
            　
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-fjdhpX hZnkOe"
  >
    <div
      className="sc-bZQynM lmXxAo"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-dnqmqq sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM lmXxAo"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-dnqmqq sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM lmXxAo"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-dnqmqq sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM lmXxAo"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-dnqmqq sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
